go-main-app2/service-1.10.yaml
apiVersion: v1
kind: Service
metadata:
  name: images-110-svc
spec:
  type: ClusterIP
  selector:
    app: images-110
  ports:
    - port: 3030
      protocol: TCP
      targetPort: 3000
