go-main-app2/ingress-1.10.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-110
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: images-110-svc
          servicePort: 3030
